--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h3 {
 
 p {
   line-height: 1.5em;
+  align-items: center;
   margin: 0;
 }
 
@@ -31,14 +32,14 @@ section.alternate-background {
 }
 
 main img {
-  width: 100%;
+  width:100%
 }
 
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .item {
@@ -62,7 +63,6 @@ header {
   background-color: #ff385c;
   padding: 20px 20px 0 20px;
   text-align: center;
-  justify-content: space-around;
 }
 
 .logo {
@@ -71,9 +71,13 @@ header {
   color: #fff;
 }
 
-header nav ul {
+header nav {
   display: flex;
   justify-content: center;
+}
+
+header nav ul {
+  display: flex;
 }
 
 header nav ul li {
@@ -93,15 +97,18 @@ header nav ul li a:hover {
 
 /* -------  Search Form ------- */
 form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   border: 2px solid #ff385c;
   padding: 10px;
+  flex-direction: column
 }
 
 form label {
   font-weight: bold;
+}
+
+form div {
+  display: flex;
+  justify-content: space-around;
 }
 
 form select,
@@ -116,13 +123,9 @@ form button {
   color: #fff;
   font-size: 24px;
   padding: 15px;
-  width: 100%;
+  ;
 }
 
-form fieldset div {
-  justify-content: space-between;
-  display: flex;
-}
 /* -------  Footer ------- */
 
 footer {
@@ -134,65 +137,102 @@ footer p {
   text-align: center;
   padding: 20px;
 }
-
 .grid {
+  
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap:wrap;
   flex-direction: column;
 }
-
 /* -------  Media Query ------- */
-@media all and (min-width: 600px) {
+
+@media (min-width: 480px) {
   header {
-    background-color: #ff385c;
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
+    padding: 0;
   }
-
-  header nav {
-    padding: 10px;
-  }
-
-  form {
-    flex-direction: row;
-  }
-#host div {
-  display: flex;
+  .paragraph{
+  align-items: center;
+  margin: auto 0
+}
+.p2{
+  flex: 1;
+  padding-right: 20px;
+  margin: auto 0;
   
 }
-  .group {
-    display: flex;
+.picture{
+  flex: 1
+}
+
+.grid{
+  flex-direction:row;
+ 
+}
+.grid div{
+  width:50%
+
+}
+.grid img{
+  width:80%
+}
+  .column img{
+    width: 20%;
+    padding: 5px;
+
+  }
+
+  .last{
     flex-direction: row;
-    justify-content: center;
-    flex-flow: row nowrap;
+    display:flex;
+
+    
+  }
+
+  .button{
+    width: 100px
+  }
+
+  .column{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-around
+  }
+
+  .container{
+    flex-direction: row;
+    
+  }
+
+  .logo {
+    margin: 14 px 0 14px 20px;
+    padding-top: 0;
+    font-size: 38px
+  }
+
+  header nav ul {
     align-items: center;
   }
 
-  .vacation-form .item {
-    display: flex block;
-    flex: 1 1 auto;
-    flex-direction: column;
-  }
-
-  .item label
-  , .item input 
-  , .item select 
-  , .item button{
-    display: flex;
-    width: 100%
-  }
-
-  .grid-column {
-    display: flex;
-    flex: 1;
-    flex-direction: column; 
-    margin: 10px;
-  }
-
-  .grid-row {
-    display: flex;
-    flex: 1;
+  .group {
     flex-direction: row;
+    align-items: center;
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction:row;
+  }
+
+  form div {
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  form select,
+  form input {
+    margin-bottom: 0px;
   }
 }
