--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 60px;
   color: #fff;
 }
 
@@ -145,7 +145,7 @@ footer p {
 }
 /* -------  Media Query ------- */
 
-@media (min-width: 480px) {
+@media (min-width: 1000px) {
   header {
     display: flex;
     justify-content: space-around;
@@ -158,9 +158,13 @@ footer p {
 .p2{
   flex: 1;
   padding-right: 20px;
-  margin: auto 0;
-  
+  margin: auto 0;  
 }
+
+#about p{
+  display: flex;
+}
+
 .picture{
   flex: 1
 }
@@ -174,23 +178,20 @@ footer p {
 
 }
 .grid img{
-  width:80%
+  width: 97%;
 }
   .column img{
-    width: 20%;
+    width: 24%;
     padding: 5px;
-
   }
 
   .last{
     flex-direction: row;
     display:flex;
-
-    
   }
 
   .button{
-    width: 100%
+   padding: 10px 40px;
   }
 
   .column{
@@ -201,7 +202,6 @@ footer p {
 
   .container{
     flex-direction: row;
-    
   }
 
   .logo {
